force-app/main/default/objects/HTTPCalloutConfiguration__mdt/HTTPCalloutConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Details for HTTP callouts to external entities.</description>
    <label>HTTPCalloutConfiguration</label>
    <pluralLabel>HTTPCalloutConfiguration</pluralLabel>
</CustomObject>