force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/HeaderParameters__c.field-meta.xml
<CustomField>
    <fullName>HeaderParameters__c</fullName>
    <description>HTTP header, including Content-Type representation headers, or related to request context</description>
    <label>Header/Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>