force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/HeaderParametersLong__c.field-meta.xml
<CustomField>
    <fullName>HeaderParametersLong__c</fullName>
    <description>Header Parameters stored as key-value pairs</description>
    <inlineHelpText>Use the below format to store header parameters:-

key1:value1
key2:value2
key3:value3</inlineHelpText>
    <label>Header/ParametersLong</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>