force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/Success_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Success_Status_Code__c</fullName>
    <description>Status Code returned with response indicating success or error.</description>
    <label>Success Status Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>