force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/URLParameters__c.field-meta.xml
<CustomField>
    <fullName>URLParameters__c</fullName>
    <description>Parameters for callout URL</description>
    <label>URLParameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>