force-app/main/default/objects/HTTPCalloutConfiguration__mdt/fields/URLParametersLong__c.field-meta.xml
<CustomField>
    <fullName>URLParametersLong__c</fullName>
    <description>URL Parameters stored as key-value pairs</description>
    <label>URLParametersLong</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>